; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/i915/gvt/extr_edid.c_intel_vgpu_init_i2c_edid.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/i915/gvt/extr_edid.c_intel_vgpu_init_i2c_edid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.intel_vgpu = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { %struct.intel_vgpu_i2c_edid }
%struct.intel_vgpu_i2c_edid = type { i32, i32, i32, %struct.TYPE_3__, i32, i64, i32 }
%struct.TYPE_3__ = type { i32, i32 }

@I2C_NOT_SPECIFIED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @intel_vgpu_init_i2c_edid(%struct.intel_vgpu* %0) #0 {
  %2 = alloca %struct.intel_vgpu*, align 8
  %3 = alloca %struct.intel_vgpu_i2c_edid*, align 8
  store %struct.intel_vgpu* %0, %struct.intel_vgpu** %2, align 8
  %4 = load %struct.intel_vgpu*, %struct.intel_vgpu** %2, align 8
  %5 = getelementptr inbounds %struct.intel_vgpu, %struct.intel_vgpu* %4, i32 0, i32 0
  %6 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %5, i32 0, i32 0
  store %struct.intel_vgpu_i2c_edid* %6, %struct.intel_vgpu_i2c_edid** %3, align 8
  %7 = load i32, i32* @I2C_NOT_SPECIFIED, align 4
  %8 = load %struct.intel_vgpu_i2c_edid*, %struct.intel_vgpu_i2c_edid** %3, align 8
  %9 = getelementptr inbounds %struct.intel_vgpu_i2c_edid, %struct.intel_vgpu_i2c_edid* %8, i32 0, i32 6
  store i32 %7, i32* %9, align 8
  %10 = load %struct.intel_vgpu_i2c_edid*, %struct.intel_vgpu_i2c_edid** %3, align 8
  %11 = getelementptr inbounds %struct.intel_vgpu_i2c_edid, %struct.intel_vgpu_i2c_edid* %10, i32 0, i32 0
  store i32 -1, i32* %11, align 8
  %12 = load %struct.intel_vgpu_i2c_edid*, %struct.intel_vgpu_i2c_edid** %3, align 8
  %13 = getelementptr inbounds %struct.intel_vgpu_i2c_edid, %struct.intel_vgpu_i2c_edid* %12, i32 0, i32 1
  store i32 0, i32* %13, align 4
  %14 = load %struct.intel_vgpu_i2c_edid*, %struct.intel_vgpu_i2c_edid** %3, align 8
  %15 = getelementptr inbounds %struct.intel_vgpu_i2c_edid, %struct.intel_vgpu_i2c_edid* %14, i32 0, i32 2
  store i32 0, i32* %15, align 8
  %16 = load %struct.intel_vgpu_i2c_edid*, %struct.intel_vgpu_i2c_edid** %3, align 8
  %17 = getelementptr inbounds %struct.intel_vgpu_i2c_edid, %struct.intel_vgpu_i2c_edid* %16, i32 0, i32 5
  store i64 0, i64* %17, align 8
  %18 = load %struct.intel_vgpu_i2c_edid*, %struct.intel_vgpu_i2c_edid** %3, align 8
  %19 = getelementptr inbounds %struct.intel_vgpu_i2c_edid, %struct.intel_vgpu_i2c_edid* %18, i32 0, i32 4
  %20 = call i32 @memset(i32* %19, i32 0, i32 4)
  %21 = load %struct.intel_vgpu_i2c_edid*, %struct.intel_vgpu_i2c_edid** %3, align 8
  %22 = getelementptr inbounds %struct.intel_vgpu_i2c_edid, %struct.intel_vgpu_i2c_edid* %21, i32 0, i32 3
  %23 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %22, i32 0, i32 0
  store i32 0, i32* %23, align 4
  %24 = load %struct.intel_vgpu_i2c_edid*, %struct.intel_vgpu_i2c_edid** %3, align 8
  %25 = getelementptr inbounds %struct.intel_vgpu_i2c_edid, %struct.intel_vgpu_i2c_edid* %24, i32 0, i32 3
  %26 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %25, i32 0, i32 1
  store i32 0, i32* %26, align 4
  ret void
}

declare dso_local i32 @memset(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
